--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,10 +6,28 @@
     android:padding="30dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".SignUpActivity">
 
     <EditText
-        android:id="@+id/main_screen_email"
+        android:id="@+id/sign_up_screen_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/name"
+        android:layout_marginTop="10dp"/>
+
+    <EditText
+        android:id="@+id/sign_up_screen_phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="10dp"
+        android:hint="@string/phone_number"
+        android:inputType="phone" />
+
+    <EditText
+        android:id="@+id/sign_up_screen_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
@@ -17,7 +35,7 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/main__screen_password"
+        android:id="@+id/sign_up_screen_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
@@ -25,14 +43,14 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/main__screen_button"
+        android:id="@+id/sign_up_screen_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sign_up"
         android:layout_marginTop="60dp"/>
 
     <TextView
-        android:id="@+id/main__screen_login"
+        android:id="@+id/sign_up_screen_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
