--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
-    android:background="@color/colorBackground"
+    android:background="#808080"
     android:textColor="@color/colorText"
     android:orientation="vertical"
     tools:context=".LoginActivity"
@@ -15,7 +15,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBackground"
+        android:background="#808080 "
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         android:textColor="@color/colorText"/>
