--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:background="@color/colorBackground"
+    android:background="@color/colorPrimaryDark"
     android:textColor="@color/colorText"
     android:orientation="vertical"
     android:id="@+id/movie_fr_linearLayout">
